# fulfillmentGG

./: .env.sample  README.md  data.json  pyproject.toml  services.py
cabinet/: admin.py  forms.py  models.py  services.py  urls.py  views.py
cabinet/migrations/: 0001_initial.py  0002_alter_product_is_active.py  0003_alter_product_barcode_alter_product_name.py  0004_dashboard.py  0005_alter_dashboard_product.py  0006_alter_dashboard_product.py  0007_dashboard_name.py  0008_alter_product_quantity.py  0009_alter_product_quantity.py  0010_alter_product_quantity.py  0011_alter_dashboard_product_supply.py  0012_alter_supply_options.py  0013_remove_supply_product_supply_product.py  0014_remove_supply_product_remove_supply_quantity_and_more.py  0015_alter_supply_status.py  0016_remove_dashboard_product.py  0017_alter_productaccept_options.py  0018_remove_productaccept_product_productaccept_product.py  0019_alter_supply_status.py  0020_deliverypoint_marketplace_shipment_productshipment_and_more.py  0021_shipment_comment.py  0022_alter_deliverypoint_options_and_more.py  0023_company.py  0024_company_owner.py  0025_alter_company_current_account_alter_company_inn.py
config/: settings.py  urls.py
ful/: admin.py  apps.py  models.py  urls.py  views.py
ful/migrations/: 0001_initial.py  0002_faq_services.py  0003_categoryfaq_faq_category.py  0004_alter_faq_category.py  0005_alter_faq_category.py  0006_services_measurement.py  0007_alter_services_description.py  0008_jobtitle_warehouses_employees.py  (+3 more)
users/: admin.py  forms.py  models.py  urls.py  views.py
(+43 files in other folders)
